General: Fix footer separator's 1 pixel gap on some window sizes

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -18,6 +18,7 @@
 
 .pre-footer-cover-container {
   position: relative;
+  margin-bottom: -1px;
 
   .page-separator-cover {
     color: black;
